@@ -4,10 +4,10 @@ DIST laditools-1.0-rc1.tar.bz2 38688 SHA256 dbb2fb1dd4f09cecbaa7e5296b1cc169d2ea
 DIST laditools-1.0.1.tar.gz 65264 SHA256 f0edd1ff45514dce2206ba01a43b362155787231046456367e48f9bc10d2c1e1 SHA512 d40c361373be55ee448395712e3f0d79b844029e110d6d4c8eb51fb3d47c9d2d45ec04e6e551f7dd656872d22d322cd5969bfe57ac9a94663b566573e40d7a8b WHIRLPOOL e4caf31bb9456d5c34c09c9a15f63da991ff75beeb5d67f936d41443b48724878ea08b7b295675f95705595629bea72093ee079fff0bcceab74e721ef7266a3f
 DIST laditools-1.0.tar.bz2 51329 SHA256 12568df25221ad07f6aa55a0ea628e251e39d043ccba5d57d4fc01416155d77f SHA512 fce9b354e2e5438072b3d1ee0b8a27d5c86790ffa985de052fc409d036091be1391a030994d5a5b0d63f18596d6f57cf4ca73c1e72f597b11424174aa42dae34 WHIRLPOOL 66e201d27fd02476fed20b2da4a936b66b7d1afed6ed32eec99b59a8f31fad04aae8816075553f384f6b082fe22aa846941f8e5255a0b2fefe855eccc1a17174
 DIST laditools-1.0~rc8.tar.gz 59791 SHA256 7b1bd034d1b51d00af8919b0bc2c4bbd8a817d3d08b77b4dc8dc160a14213c45 SHA512 9dc4cd5e7e04b1dfc924c213448be0ae360469c3df19736bf0773fe9c47f0fa777cf7013fa46279244cd95541ff9b9c0f108756ac02a2ccec8c788169917beeb WHIRLPOOL a1b95a06d4bc7cdb74f18f11f63dcf267deba3a4875b198d16aa22928602376d37214bbc2e46d471a85fb7201bd14edee6c30844f466697efad6cbae09952f91
-EBUILD laditools-1.0.1.ebuild 814 SHA256 31d94ccb6f9c0d152b7da0a66926d9d77ac9f9203d24bafcaca70e439877a00a SHA512 905c37171dc952236e235411d11916dcad91643939188555c4594ba96a5c19b0fd1354badb47773b2389ed6e0904ed90fe1ba83b22850fb68be0cddcc11346d2 WHIRLPOOL d84623c70bfe6dc300f4d41afbc4d5ff19e29c48fd50a2fbf3756aac24bbcb8998c01c85048f904844a16e98dfe74e1f217b1028c932cc2828332edb1c8b4032
+EBUILD laditools-1.0.1.ebuild 810 SHA256 4592ec29af53dbb6cf19305b455f475cb6b5e4c1413be223c86f6999e6194e6a SHA512 20a0a03e0dfa91838f62ac08073839394886c7a7d2b3760ce6bbdbddb5f4affaed4e7bd749f7c84d86d9c640ff0740517ac3d9fe8dfdb3e5d5e64f1bd2a5b26c WHIRLPOOL 9d4f46d11d0d89c474612bd549dd856abaa34f54e180d1695030a972040655aee87914cb0d5053234298cfb80fc8128f4831a6373a7e3f2642a224912f3595c2
 EBUILD laditools-1.0.ebuild 664 SHA256 1d0167979cc847fbe33b467b9bb766e21bb20564500f830d017c2fe1cbb1757d SHA512 aafc6a9f5571997442d00799ffb55ab77eba2ab52b009055d886da8a029710db9413eb8f56d38904cb99908f78d8972c3ecd94d94b5301808e3a70aae97572e5 WHIRLPOOL 951270c0314d0aa922632e361b3e0af2121cab7599847959562f6d7366dd0d855d6458779d123ec134282cba81c098ec816caed46498ff7464e463bed5ce8110
 EBUILD laditools-1.0_rc1.ebuild 761 SHA256 14718c9cc39454e1ab436fa76b43916909ce7f149a9f0f548919b87e4d634709 SHA512 2cd7867220275158c5129aa138f5c5cbbf366bef5ae8e7c8310885aa0ddc1d4cf82187a2643b8b860b69e0d5966300de05cbca08502784fc47c75cbb77d1297d WHIRLPOOL a7b01e05fab64f7adebb5a851c5d602bfbb6eda1e68cc1379187b7d0c50444bf18061b1b41b1539d609329db20f186841f03efca1c20abea85d16d63cdf04c2b
-EBUILD laditools-1.0_rc8.ebuild 969 SHA256 edb85fc8b323c2d72701cd92bcc5c7941c0a56e2279de62d49642b4164d2e726 SHA512 7acff9ed4093b1b32d408bb6125c4b9d7b9295aa9ea7eee1eef562b1f446b90126f515a379443822db8b7778055129c9a8e4181976d553a5b46f700591b80646 WHIRLPOOL 0ce0d969d05d303dabe55778acbf0f537e3ed84116e4025c0d0c4853584b120acf1fb36981aa8ebe59e3b802ce553246bf50896686598991e35e54be9f8ca5ae
-EBUILD laditools-9999.ebuild 708 SHA256 7b043cdc5b598911e09919eb7d1da57c92b3e39a4299aa6441fc18ff08a6b330 SHA512 ab0656248816db265c907c4b5570b19b1e11ab3f6131f2715934765d99349a0a60258dd743fdb6611a3fbb0d20c4cb7b4829e23306d1dbb71305e0de8d7a5097 WHIRLPOOL f5c2a3845e9ca31cbba1413707397e8bbecab74ff9fc125f81a0d789ed3981f70ba57317dce1432248e430774e6eaf4df952fdc7fb0358fcea236c20a8148a42
-MISC ChangeLog 800 SHA256 0e015d9365b0753d04e6e879743397776e88fe05a7c22d33d201aae05aec3e33 SHA512 a07f9edfb1af264a0989cc691da191a755fb1eed2a0152acea79f4df1d2e4f9f742858f670d7537170466e03ecb58d656ba9fc630ec01108302c119b4d717c63 WHIRLPOOL 505f59f4944cf1ef98c6810986ace654afd6ebfa821e905e6db01dcc8275155631f75bafd3a41b3c407c9472776f7b9160be3283b3987774241b883d09608323
+EBUILD laditools-1.0_rc8.ebuild 941 SHA256 3fe8c62b97e3ef21043303b455370af1fe239edd7a560285aa382a90609682b7 SHA512 e41d3b6d460a250baddece730b9d72acf52bae23d56531531f115b75c182cfc9e522a0aaa33ded0d2b5967f9710aaf58a7a41a1d20e31dd19da35c53c49b7893 WHIRLPOOL c2ffea4c0131b5ce5e73db2b9c90a782f2df3371f9c65910e1fddb362bff670b9d7fcfc31e72756ef24dbfa9add8f6fd615cb00ca07ca8c094fb55eb09374ffa
+EBUILD laditools-9999.ebuild 704 SHA256 4efaa3926146da1aa7f3fa6d35d8ab27ec35cbaec1c34b7668603863c236aa50 SHA512 7870fcb3abb3d8e4da10eb2fbd09848fc349586c1c45b462f4783f57803746f56ddf25a9b46ea5d24bdfac532d235f7cd6c304a65839e453620b87f7205cd101 WHIRLPOOL baf6fc6dcd5a223e8ae97e0bc96b41f9eaaa47dd84f360efc0849a597188b420b66ae0c3a9f057c35e81e2cc2b2a5a6464d351d22beea8d3c17728d2888c9ae6
+MISC ChangeLog 1035 SHA256 5dbd7fb5a5eb9506a7827243a343ca2dbd4fd5e0ce5f03728bc13fcc2633de2a SHA512 d57a087ce6f33eacb182ae07afd82e9b8ea07465abeedb3a89f9f77d92e1463993735e7f78f4461f302995863fb1db9b84be5c5415420f0322a99bc217eb542a WHIRLPOOL 60a1806fb2ff8109ad818694d61f43f20c6f493d78bbc9cd4aee64b581d869507b5ff2cd7f49f5d7fe11cce6a075b50c3e9b6ad1bf5518d765824fa4118d108f
 MISC metadata.xml 1308 SHA256 973596eb53815af7cfc23b63a6041761af9391e341652855c3513ce2cd39f1ba SHA512 f51773663401375811e033618e5c3cc0498d1dcdc361546d865a08aee01496cf493230576078705cf6636f09959a2a3554f36f676ef7745e4be8bed40acd5b0e WHIRLPOOL eb17eeea8c9d5b3ee681017e4570b8fa1a51a2bc1da11186fca5087e8a0f8e3f5af4f990eed77d590b4d6ca157903233f3230e117fdb371d917ad63d1f2d0cec
