@@ -6,7 +6,7 @@ EAPI="5"
 
 PYTHON_COMPAT="python2_7"
 
-inherit git-2 python-distutils-ng
+inherit git-2 python-r1 distutils-r1
 
 DESCRIPTION="Control and monitor a LADI system the easy way"
 HOMEPAGE="https://launchpad.net/laditools"
@@ -21,7 +21,7 @@ RDEPEND="dev-lang/python
 	>=dev-python/pygtk-2.12
 	dev-python/pyxdg
 	>=dev-python/enum-0.4.4
-	dev-python/pygobject[introspection]
+	>=dev-python/pygobject-3.0.0
 	dev-python/pyxml
 	>=x11-libs/gtk+-3.0.0[introspection]
 	x11-libs/vte[introspection]
